--- a/poc/poc-esp32-i2c-somose.yaml
+++ b/poc/poc-esp32-i2c-somose.yaml
@@ -1,7 +1,7 @@
 # include the base config like wifi and logging
-<<: !include ../include-base.yaml
-<<: !include ../include-esp32.yaml
-<<: !include ../include-esp32-i2c.yaml
+<<: !include ../include-base.yaml.snipped
+<<: !include ../include-esp32.yaml.snipped
+<<: !include ../include-esp32-i2c.yaml.snipped
 <<: !include ./poc.yaml
 
 esphome:
